Fix alignment of field label and value Update field label with value to orange

--- a/src/main/webapp/resources/css/savie-styles.css
+++ b/src/main/webapp/resources/css/savie-styles.css
@@ -1181,6 +1181,34 @@ h6 {
   font-size: 12px;
 }
 
+#application-summary-page .is-dirty .mdl-textfield__label,
+#application-summary-page .is-not-active .cstm-dropdown-label,
+#beneficiary-name-others-page .so-mdl-textfield.is-not-active label,
+#personal-info .so-mdl-textfield.is-not-active label {
+  color: #ff8200 !important;
+}
+#plan-details-b-page .mdl-textfield__label.so-mdl-textfield-label.custom-made-label,
+#sales-illustration-page .data-label,
+#unemployed-page .cstm-dropdown-label,
+#payment-page .info-label,
+#payment-page .bank-info-select-label,
+#payment-page .mdl-textfield__label.cstm-dropdown-label,
+#beneficiary-name-others-page .selectDiv.is-not-active .cstm-textfield-label,
+#beneficiary-name-others-page .selectDiv.is-not-active .cstm-dropdown-label,
+#personal-info .selectDiv.is-not-active .cstm-textfield-label,
+#personal-info .selectDiv.is-not-active .cstm-dropdown-label {
+  color: #ff8200;
+}
+#unemployed-page .selectDiv .gray-dropdown{
+	margin-top:6px;
+}
+#application-summary-page .so-mdl-textfield.is-not-active .mdl-textfield__label.readonly-field-label{
+	color: rgba(0,0,0,.26) !important;
+	top: 10px !important;
+}
+#application-summary-page .warning-note{
+	margin-top: 0;
+}
 /* line 717, ../sass/partials/savie/_common.scss */
 .active-checkbox:after {
   border: 0px solid #FFF !important;
@@ -1374,7 +1402,7 @@ h6 {
   font-size: 14px;
   font-family: calibri-bold;
   top: 4px;
-  padding-left: 18px;
+  padding-left: 17px;
 }
 
 /* line 1, ../sass/partials/savie/_media.scss */
@@ -4966,7 +4994,7 @@ a.eserv-link:hover {
   font-size: 18px;
   color: #000;
   padding: 12px 15px 0 15px;
-  margin-top: 3px;
+  margin-top: 6px;
 }
 /* line 52, ../sass/partials/savie/_applicant-info.scss */
 #savie-online .selectDiv.is-not-active .gray-dropdown {
@@ -5224,7 +5252,7 @@ a.eserv-link:hover {
 }
 /* line 34, ../sass/partials/savie/_application-summary.scss */
 .savie-application-summary .selectDiv .gray-dropdown {
-  padding-left: 10px !important;
+  /*padding-left: 10px !important;*/
 }
 /* line 39, ../sass/partials/savie/_application-summary.scss */
 .savie-application-summary .summary-section {
